# muchanizer

./: README.md
kcd-demo-manifests/: 04-servicemesh  05-serverless  06-authorino  08-bot
kcd-demo-manifests/04-servicemesh/: 01-namespace.yaml  02-operatorgroup.yaml  03-subscription.yaml
kcd-demo-manifests/05-serverless/: 01-namespace.yaml  02-operatorgroup.yaml
kcd-demo-manifests/06-authorino/: 03-subscription.yaml
kcd-demo-manifests/08-bot/: 02-imagestream.yaml  03-bot-buildconfig.yaml  04-bot-settings.yaml  05-bot-deployment.yaml  06-model-buildconfig.yaml  07-pvc-hg-cache.yaml  08-model-runtime.yaml  09-model-inference.yaml
manifests/01-nodepools/: gpu-machines.yaml
manifests/03-nvidia/: 03-subscription.yaml
manifests/05-serverless/: 03-subscription.yaml
manifests/08-bot/: 01-namespace.yaml  02-imagestream.yaml  03-bot-buildconfig.yaml  04-bot-settings.yaml  05-bot-deployment.yaml  06-model-buildconfig.yaml  07-model-inference.yaml  07-pvc-hg-cache.yaml  08-model-inference.yaml  08-model-runtime.yaml  09-model-inference.yaml
src/bot/: Dockerfile  __init__.py  ai.py  pyproject.toml
src/bot/src/: __init__.py  ai.py  bot.py  request.py
src/modelserver/: Dockerfile  pyproject.toml
src/modelserver/libs/: diffuser_class.py
src/modelserver/src/: __init__.py  model.py
src/modelserver/src/libs/: diffuser_class.py  tools.py
