[project]
name = "diffusers-modelserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
    "torch>=2.6.0",
    "kserve>=0.15.0",
    "diffusers>=0.32.2",
    "pillow>=11.1.0",
    "transformers>=4.50.3",
    "accelerate>=1.6.0",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.30.1",
    "hf-xet>=1.0.0",
    "torchvision>=0.21.0",
    "peft>=0.15.1",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "hf-transfer>=0.1.9",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
